--- a/RestAssuredProject/pom.xml
+++ b/RestAssuredProject/pom.xml
@@ -61,5 +61,12 @@
 			<artifactId>json</artifactId>
 			<version>20240303</version> <!-- Use latest stable version -->
 		</dependency>
+		<!--
+		https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.19.1</version>
+		</dependency>
 	</dependencies>
 </project>
