--- a/RestAssuredProject/pom.xml
+++ b/RestAssuredProject/pom.xml
@@ -68,5 +68,13 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.19.1</version>
 		</dependency>
+
+		<!--
+		https://mvnrepository.com/artifact/org.apache.juneau/juneau-marshall -->
+		<dependency>
+			<groupId>org.apache.juneau</groupId>
+			<artifactId>juneau-marshall</artifactId>
+			<version>9.1.0</version>
+		</dependency>
 	</dependencies>
 </project>
